<resources>
    <string name="app_name">Scriptarium</string>
    <string name="title_ideas">Ідеї</string>
    <string name="title_favorites">Вірші</string>
    <string name="title_materials">Довідка</string>
    <string name="literal_mov">Літературні течії</string>
    <string name="genres">Жанри</string>
    <string name="literary_flows">Літературні течії</string>
    <string name="literary_genres">Жанри</string>
    <string name="ok" translatable="false">OK</string>
    <string-array name="genres_names">
        <item>Епос</item>
        <item>Роман</item>
        <item>Повість</item>
        <item>Оповідання</item>
        <item>Новела</item>
        <item>Притча</item>
        <item>Легенда</item>
        <item>Міф</item>
        <item>Казка</item>
        <item>Лірика</item>
        <item>Пісня</item>
        <item>Вірш</item>
        <item>Ода</item>
        <item>Гімн</item>
        <item>Елегія</item>
        <item>Драма</item>

    </string-array>
    <string-array name="literary_movement">
        <item>Бароко</item>
        <item>Класицизм</item>
        <item>Сентименталізм</item>
        <item>Романтизм</item>
        <item>Реалізм</item>
        <item>Модернізм</item>
        <item>Декаданс</item>
        <item>Неоромантизм</item>
        <item>Імпресіонізм</item>
        <item>Експресіонізм</item>
        <item>Символізм</item>
        <item>Неокласицизм</item>
        <item>Футуризм</item>
        <item>Неореалізм</item>
        <item>Екзистенціалізм</item>
        <item>Постмодернізм</item>
    </string-array>
    <string-array name="type_of_definitions">
        <item>Течії</item>
        <item>Жанри</item>
    </string-array>
    <string name="epos_describe">(дав.-гр. ἔπος — «слово», «оповідання») — різновид літературного роду
        (нарівні з лірикою і драмою), що розповідає про події, які нібито відбувалися у минулому (немов здійснювалися насправді і згадуються оповідачем).
    </string>
    <string name="Romance_describe">великий за обсягом і складний за будовою епічний твір, у якому широко охоплені важливі й складні суспільні процеси, всебічно і в розвитку показані численні персонажі.
</string>
    <string name="story_describe">епічний прозовий твір (рідше віршований), який характеризується однолінійним сюжетом, а за широтою охоплення життєвих явищ і глибиною їх розкриття посідає проміжне місце між романом та оповіданням.
</string>
    <string name="Opinion_describe">невеликий прозовий твір, сюжет якого ґрунтується на певному (рідко кількох) епізоді з життя одного (іноді кількох)
        персонажу.</string>
    <string name="Novela_describe">невеликий за обсягом прозовий епічний твір про незвичайну життєву подію з несподіваним фіналом, сконденсованою та
        яскраво вимальованою дією.</string>
    <string name="Parable_describe">короткий фольклорний або літературний розповідний твір повчального характеру, орієнтований переважно на алегоричну
        форму доведення змісту етичних цінностей буття</string>
    <string name="Legend_describe">народне сказання або оповідання про якісь події чи життя людей, оповите казковістю, фантастикою.</string>
    <string name="Myth_describe">стародавня народна оповідь про явища природи, історичні події тощо або фантастичні оповідання про богів, обожнених героїв, уявних істот.</string>
    <string name="Tale_describe">фольклорний розповідний твір про вигадані, а часто й фантастичні події.</string>
    <string name="Lyric_describe">(грец. lyrikós — лірний; твір, виконаний під акомпанемент ліри) — один із трьох родів художньої літератури та мистецтва, в якому у формі естетизованих переживань осмислюється сутність людського буття; не має чітко окресленого сюжету‚ для неї характерні віршова форма‚ велика кількість художніх засобів‚ високий рівень емоційності.
</string>
    <string name="Song_describe"> вірш ліричного або ліро-епічного характеру, мелодичний за своїм інтонаційним малюнком і призначений для співу</string>
    <string name="Verse_describe">невеликий поетичний твір, написаний ритмізованою мовою, найчастіше з римуванням рядків</string>
    <string name="Ode_to_describe">вірш, що виражає піднесені почуття, викликані важливими історичними подіями, діяльністю історичних осіб.</string>
    <string name="Anthem_describe">урочиста пісня, прийнята як державний або соціальний символ; музичний твір урочистого характеру в оперному, симфонічному, хоровому мистецтві.</string>
    <string name="Elegy_describe">це твір медитативного характеру, журливої тональності, поетична сюжетна основа якого — емоційна реакція на певні події, ситуацію, психічні імпульси (почуте, згадане, пережите) чи конкретний душевний стан ліричного "Я", яке охоплене меланхолією, смутком, навіть стражданням.
</string>
    <string name="Drama_describe">(дав.-гр. δρᾶμα — «дія», «діяння», «дійство») — один з літературних родів, який змальовує світ у формі дії, здебільшого призначений для сценічного втілення.</string>
    <string name="Epos">Епос</string>
    <string name="Romance">Роман</string>
    <string name="story">Повість</string>
    <string name="Opinion">Оповідання</string>
    <string name="Novela">Новела</string>
    <string name="Parable">Притча</string>
    <string name="Legend">Легенда</string>
    <string name="Myth">Міф</string>
    <string name="Tale">Казка</string>
    <string name="Lyric">Лірика</string>
    <string name="Song">Пісня</string>
    <string name="Verse">Вірш</string>
    <string name="Ode_to">Ода</string>
    <string name="Anthem">Гімн</string>
    <string name="Elegy">Елегія</string>
    <string name="Drama">Драма</string>
    <string-array name="genres_description">
        <item>(дав.-гр. ἔπος — «слово», «оповідання») — різновид літературного роду(нарівні з лірикою і драмою), що розповідає про події, які нібито відбувалися у минулому (немов здійснювалися насправді і згадуються оповідачем).</item>
        <item>великий за обсягом і складний за будовою епічний твір, у якому широко охоплені важливі й складні суспільні процеси, всебічно і в розвитку показані численні персонажі.</item>
        <item>епічний прозовий твір (рідше віршований), який характеризується однолінійним сюжетом, а за широтою охоплення життєвих явищ і глибиною їх розкриття посідає проміжне місце між романом та оповіданням.</item>
        <item>невеликий прозовий твір, сюжет якого ґрунтується на певному (рідко кількох) епізоді з життя одного (іноді кількох) персонажу.</item>
        <item>невеликий за обсягом прозовий епічний твір про незвичайну життєву подію з несподіваним фіналом, сконденсованою та яскраво вимальованою дією.</item>
        <item>короткий фольклорний або літературний розповідний твір повчального характеру, орієнтований переважно на алегоричну форму доведення змісту етичних цінностей буття</item>
        <item>народне сказання або оповідання про якісь події чи життя людей, оповите казковістю, фантастикою.</item>
        <item>стародавня народна оповідь про явища природи, історичні події тощо або фантастичні оповідання про богів, обожнених героїв, уявних істот.</item>
        <item>фольклорний розповідний твір про вигадані, а часто й фантастичні події.</item>
        <item>(грец. lyrikós — лірний; твір, виконаний під акомпанемент ліри) — один із трьох родів художньої літератури та мистецтва, в якому у формі естетизованих переживань осмислюється сутність людського буття; не має чітко окресленого сюжету‚ для неї характерні віршова форма‚ велика кількість художніх засобів‚ високий рівень емоційності.</item>
        <item>вірш ліричного або ліро-епічного характеру, мелодичний за своїм інтонаційним малюнком і призначений для співу</item>
        <item>невеликий поетичний твір, написаний ритмізованою мовою, найчастіше з римуванням рядків</item>
        <item>вірш, що виражає піднесені почуття, викликані важливими історичними подіями, діяльністю історичних осіб.</item>
        <item>урочиста пісня, прийнята як державний або соціальний символ; музичний твір урочистого характеру в оперному, симфонічному, хоровому мистецтві.</item>
        <item>це твір медитативного характеру, журливої тональності, поетична сюжетна основа якого — емоційна реакція на певні події, ситуацію, психічні імпульси (почуте, згадане, пережите) чи конкретний душевний стан ліричного "Я", яке охоплене меланхолією, смутком, навіть стражданням.</item>
        <item>(дав.-гр. δρᾶμα — «дія», «діяння», «дійство») — один з літературних родів, який змальовує світ у формі дії, здебільшого призначений для сценічного втілення.</item>
    </string-array>
</resources>