<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoryFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="74dp"
        android:layout_height="63dp"
        android:contentDescription="@string/genres"
        android:src="@drawable/baseline_arrow_circle_left_20"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/story"
        android:layout_width="275dp"
        android:layout_height="66dp"
        android:text="@string/story"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/story_describe"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="68dp" />

    <TextView
        android:id="@+id/story_describe"
        android:layout_width="312dp"
        android:layout_height="341dp"
        android:text="@string/story_describe"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />


</androidx.constraintlayout.widget.ConstraintLayout>