<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ideas">

    <fragment
        android:id="@+id/navigation_ideas"
        android:name="com.example.sproject.ui.home.IdeaFragment"
        android:label="@string/title_ideas"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_ideas_to_notesTakerFragment"
            app:destination="@id/notesTakerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.sproject.ui.dashboard.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_materials"
        android:name="com.example.sproject.ui.definitions.MaterialsFragment"
        android:label="@string/title_materials"
        tools:layout="@layout/fragment_materials" >
        <action
            android:id="@+id/action_navigation_materials_to_genresFragment"
            app:destination="@id/genresFragment" />
    </fragment>
    <fragment
        android:id="@+id/genresFragment"
        android:name="com.example.sproject.ui.definitions.viewpager_fragments.GenresFragment"
        android:label="GenresFragment" />
    <fragment
        android:id="@+id/notesTakerFragment"
        android:name="com.example.sproject.ui.notesTaker.NotesTakerFragment"
        android:label="fragment_notes_taker"
        tools:layout="@layout/fragment_notes_taker" >
        <action
            android:id="@+id/action_notesTakerFragment_to_navigation_ideas"
            app:destination="@id/navigation_ideas" />
    </fragment>

</navigation>