<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParableFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="74dp"
        android:layout_height="63dp"
        android:contentDescription="@string/genres"
        android:src="@drawable/baseline_arrow_circle_left_20"
        app:layout_constraintBottom_toTopOf="@+id/Parable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Parable"
        android:layout_width="275dp"
        android:layout_height="66dp"
        android:text="@string/Parable"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/Parable_describe"
        android:layout_width="351dp"
        android:layout_height="361dp"
        android:text="@string/Parable_describe"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />


</androidx.constraintlayout.widget.ConstraintLayout>