<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".OpinionFragment"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="74dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/genres"
        android:src="@drawable/baseline_arrow_circle_left_20"
        app:layout_constraintBottom_toTopOf="@+id/opinion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/opinion"
        android:layout_width="283dp"
        android:layout_height="88dp"
        android:text="@string/Opinion"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/opinion_describe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <TextView
        android:id="@+id/opinion_describe"
        android:layout_width="312dp"
        android:layout_height="341dp"
        android:text="@string/Opinion_describe"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

</androidx.constraintlayout.widget.ConstraintLayout>