<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RomanceFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="74dp"
        android:layout_height="63dp"
        android:contentDescription="@string/genres"
        android:src="@drawable/baseline_arrow_circle_left_20"
        app:layout_constraintBottom_toTopOf="@+id/romance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/romance"
        android:layout_width="363dp"
        android:layout_height="65dp"
        android:background="@color/purple_light"
        android:text="@string/Romance"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/romance_describ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <TextView
        android:id="@+id/romance_describ"
        android:layout_width="366dp"
        android:layout_height="457dp"
        android:text="@string/Romance_describe"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

</androidx.constraintlayout.widget.ConstraintLayout>